Fix/improve styling for meal calendar comp on mobile

--- a/Frontend/src/app/components/meal-calendar/meal-calendar.component.scss
+++ b/Frontend/src/app/components/meal-calendar/meal-calendar.component.scss
@@ -57,7 +57,7 @@
         }
 
         &.highlighted {
-          background-color: rgba(var(--ion-color-primary-rgb), 0.2);
+          background-color: rgba(var(--ion-color-primary-rgb), 0.3);
         }
 
         .date {
@@ -114,10 +114,16 @@
 
           &.today {
             color: var(--ion-color-primary);
+            font-weight: bold;
           }
 
           &.selected {
             background: var(--ion-color-primary);
+            color: var(--ion-color-light);
+          }
+
+          &.highlighted {
+            background-color: rgba(var(--ion-color-primary-rgb), 0.7);
             color: var(--ion-color-light);
           }
         }
